add user registration module and integrate Shiro security framework

--- a/springboot/fileServer/src/main/resources/templates/file/list.html
+++ b/springboot/fileServer/src/main/resources/templates/file/list.html
@@ -17,7 +17,7 @@
         </div>
         <div class="layui-nav-item" style="float: right;">
             <button class="layui-btn">
-                <a href="#" style="font-size: larger; padding: 0px; color: white">login out</a>
+                <a th:href="@{/user/logout}" style="font-size: larger; padding: 0px; color: white">login out</a>
             </button>
         </div>
         <div class="layui-nav-item" style="float: right; padding-right: 20px">
