--- a/springboot/fileServer/src/main/resources/templates/user/register.html
+++ b/springboot/fileServer/src/main/resources/templates/user/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>注册</title>
+    <title>register</title>
     <link rel="stylesheet" th:href="@{/css/layui.css}">
 
 </head>
